fix: flex-wrap by groups

--- a/style.sass
+++ b/style.sass
@@ -48,6 +48,14 @@ nav
         margin: 0 10px
         @include text($fontSize: 1.2em)
         color: #fdfdff
+
+@media only screen and (max-width: 1220px) 
+  .navigation > a
+    flex-basis: 25%
+
+@media only screen and (max-width: 780px) 
+  .navigation > a
+      flex-basis: 33%
             
 .my-name
     margin-right: auto
